--- a/assets/css/typographie.css
+++ b/assets/css/typographie.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@100..900&family=Oswald&display=swap');
 
 /* Interlignage propre aux titres
 (moins espacé que le contenu courant) */
