--- a/assets/css/entete-vedette.css
+++ b/assets/css/entete-vedette.css
@@ -2,8 +2,8 @@
     max-width: 100%;
     margin-left: auto;
     margin-right: auto; 
-    padding-left: 20px;
-    padding-right: 20px; 
+    padding-left: var(--espacement-petit);
+    padding-right: var(--espacement-petit); 
     background-color: var(--couleur-arriere-plan);
     position: relative;
     display: flex;
@@ -20,7 +20,7 @@
     
     & h1{
         font-size: 3em;
-        font-weight: 900;
+        /* font-weight: 900; */
         text-transform: uppercase;
     }
     & p{
