--- a/assets/css/grille-multiple.css
+++ b/assets/css/grille-multiple.css
@@ -13,12 +13,8 @@
 		& {
 			order: 2;
 			flex-direction: row;
-			gap: 20px;
+			gap: var(--espacement-petit);
 			max-width: calc(100% - 20px);
-		}
-
-		& h3{
-			font-size: var(--petite-taille-police);
 		}
 	}
 
