--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,22 +1,3 @@
-/* 
-
-Gouttière et rythme de base
-20px
-
-Rythme serré
-20px
-
-Rythme serré
-40px
-
-Rythme espacé
-80px
-
-Largeur maximale des sections principales
-100rem
-
-*/
-
 :root{
     --couleur-arriere-plan: #eff0ed;
     --couleur-accent: #B1D862;
@@ -34,7 +15,6 @@ Largeur maximale des sections principales
     --espacement-grand: 80px;
     --largeur-max-section: 100rem;
     } 
-/* Règles génériques -----------------------  ==== ref = M.Charpentier*/
 
 /* Rétablir les marges 
 intérieures & extérieures sur tout */
@@ -57,6 +37,10 @@ body {
     background-color: var(--couleur-arriere-plan);
     color: var(--couleur-dominante);
     font-size: var(--tres-petite-taille-police);
+	font-weight: 400;
+	font-style: normal;
+	font-optical-sizing: auto;
+	letter-spacing: 1px;
 }
 
 /* Style « prototype » pour les images vides  ==== ref = M.Charpentier*/
@@ -87,7 +71,6 @@ a, input[type=submit], button{
 	cursor: pointer;
 	transition: all 0.3s ease-in-out;
 	transition-duration: 100ms;	
-	font-weight: 600;
 	box-sizing: border-box;	
 	}
 
@@ -98,7 +81,7 @@ a:hover, input[type=submit]:hover, button:hover {
 
 input[type=submit]{
 	display: block;
-	margin: 20px 0;
+	margin: 40px 0;
 	padding: 1em;
 	border:none;	
 }
@@ -106,7 +89,6 @@ input[type=submit]{
 input[type=search], input[type=text]{
 	min-width: 100%;
 	padding: 12px 20px;
-	margin: 8px 0;
 	display: inline-block;
 	border: 1px solid #3534469f;
 	border-radius: 4px;
@@ -116,7 +98,7 @@ input[type=search], input[type=text]{
 /* Règles générales des sections de contenu ==============================================================================*/
 
 
-/* Rythme vertical espacé pour bien dégagerles principaux conteneurs de contenu */
+/* Rythme vertical espacé pour bien dégager les principaux conteneurs de contenu */
 body>section {
 	margin-top: var(--espacement-grand);
 }
@@ -159,38 +141,28 @@ section > header{
 
 /*Logo*/
 .logo{
-	width: 200px;
+	max-width: 200px;
 	cursor: pointer;
 }
 
 /* Footer */
-/* .conteneur{
-	display: flex;
-	justify-content: space-between;
-	gap: 20px;
-} */
 
 .conteneur-bouton {
 	display: flex;
-	justify-content: right;
 	margin-top: var(--espacement-petit);
 	gap: var(--espacement-petit);
+	justify-content: flex-end;
+	flex-wrap: wrap;
 
-	@media (max-width: 1040px) {
+	@media (min-width: 330px) and (max-width: 800px){
 		&{
-			flex-direction: column;
-		}
-	}
-
-	@media (min-width: 330px) and (max-width: 550px){
-		&{
-			flex-direction: column;
+			justify-content: flex-start;
 		}
 	}
 }
 
 .droits-auteur{
-	padding:20px 20px;
+	padding: var(--espacement-petit);
 }
 
 
