--- a/assets/css/navigation-principale.css
+++ b/assets/css/navigation-principale.css
@@ -7,7 +7,7 @@
 	margin:0;
 	padding: 1em ;
 	color: var(--couleur-arriere-plan);
-
+	
 
 	&>* {
 		flex-basis:calc(16%);
@@ -26,7 +26,6 @@
 	}
 
 	@media screen and (max-width: 1365px) {
-		/*navigation=================*/
 		& {
 			flex-wrap: wrap;
 			justify-content: space-between;
@@ -35,7 +34,7 @@
 
 		& div:first-child {
 			flex-basis: auto;
-			margin-right: 20px;
+			margin-right: var(--espacement-petit);
 			order: 1;
 		}
 		& > a {
@@ -43,6 +42,13 @@
 			padding: 8px; 
 			order: 3;
 
+		}
+	}
+
+	@media (max-width: 1200px){
+		&{
+			justify-content: center;
+			gap: var(--espacement-petit);
 		}
 	}
 
@@ -57,6 +63,7 @@
 		}
 		& div:first-child {
 			border-top: none;
+			margin: auto;
 		}
 		& > a {
 			background-color: transparent;
