--- a/assets/css/texte-image.css
+++ b/assets/css/texte-image.css
@@ -8,7 +8,7 @@
     & > div{
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: var(--espacement-petit);
     }
     & p {
         margin-top: 0;
