--- a/assets/css/entete-vedette.css
+++ b/assets/css/entete-vedette.css
@@ -16,24 +16,23 @@
     
     &>* {
         flex-grow: 1;
+        
+    }
+    &>div>div>*+*{
+        margin-top: 0;
     }
     
     & h1{
         font-size: 3em;
         text-transform: uppercase;
     }
-    & p{
-        margin-top: 0;
-    }
+
     & h2{
-        margin-top: 0;
         font-weight: 500;
         text-transform: uppercase;
         font-size: var(--moyenne-taille-police);
     }
-    & h3{
-        margin-top:0;
-    }
+    
 
     @media (min-width: 330px) and (max-width: 550px){
         & p{
