--- a/assets/css/grille.css
+++ b/assets/css/grille.css
@@ -2,6 +2,40 @@
 	display: flex;
 	justify-content: space-between;
 	gap: var(--espacement-petit);
+
+	&>aside{
+		background-color: var(--couleur-secondaire);
+		padding:20px;
+		color: var(--couleur-dominante);
+		margin-top: -20px;/*pour coller la division sur la section*/
+
+		& header{
+			padding-bottom: var(--espacement-petit);
+			border-bottom: 1px solid #3534469f;
+		}
+
+		& h2{
+			color: var(--couleur-dominante);
+		}
+
+		& input[type=submit]{
+			background-color: var(--couleur-dominante);
+			color: var(--couleur-arriere-plan);
+			text-transform: uppercase;
+		}
+
+		& form{
+			margin-top: var(--espacement-petit);
+		}
+
+		@media (max-width: 1215px){
+			& {
+				order: 1;
+				margin-top: 0;
+				max-width: calc(100% - 100px);
+			}
+		}
+	}
 	
 	@media (max-width: 1050px) {
 		& {
